# mkit-autoupdateharga

./: .gitignore  exp_encryting.py  pyproject.toml
app/: commute_view.py  explore_view.py  favorites_view.py  fetch_strategy.py  main.py
app/app_services/: fetch_strategy.py  main_fethcer.py  schemas.py
app/config/: settings.py  values.py
app/constring/: exp_constring_builder.py  exp_encryting.py  frm_constring.py  utils.py
app/db/: oto_session.py
app/scraped_data/: supplier_html_demo.json  supplier_json_demo.json
