[project]
name = "mkit-autoupdateharga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "flet[all]>=0.28.3",
    "loguru>=0.7.3",
    "pyodbc>=5.2.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
